classDiagram
    class Owner {
        +String name
        +String day_start
        +String day_end
        +total_available_minutes() int
    }

    class Pet {
        +String name
        +String species
        +float age_years
        +List~String~ special_needs
        +List~Task~ tasks
        +add_task(Task) None
        +task_count() int
        +complete_task(Task) None
        +filter_tasks(category, completed) List~Task~
        +is_senior() bool
        +summary() String
    }

    class Task {
        +String title
        +String category
        +int duration_minutes
        +String priority
        +String earliest_start
        +String deadline
        +String notes
        +int recur_every_hours
        +String frequency
        +String due_date
        +bool completed
        +mark_complete() None
        +has_deadline() bool
        +is_mandatory() bool
    }

    class ScheduledTask {
        +Task task
        +String start_time
        +String end_time
        +String reason
        +duration_minutes() int
    }

    class DailyPlan {
        +Owner owner
        +Pet pet
        +String date
        +List~ScheduledTask~ scheduled
        +List~Tuple~ unscheduled
        +int total_minutes_scheduled
        +is_complete() bool
        +tasks_sorted_by_time() List~ScheduledTask~
        +summary() String
    }

    class Scheduler {
        +generate(Owner, Pet, List~Task~, List~DailyPlan~) DailyPlan
        +check_input_conflicts(List~Task~) List~String~
        +detect_conflicts(List~DailyPlan~) List~Tuple~
        -_sort_tasks(List~Task~) List~Task~
        -_fits_in_slot(Task, String, String) bool
        -_build_reason(Task, String) String
        -_next_free_slot(DailyPlan, Task, List~Tuple~) String
    }

    class expand_recurring_tasks {
        <<function>>
        +expand_recurring_tasks(List~Task~, String, String) List~Task~
    }

    Owner "1" --> "1" DailyPlan : provides constraints
    Pet "1" --> "0..*" Task : owns
    Pet "1" --> "1" DailyPlan : provides context
    DailyPlan "1" *-- "0..*" ScheduledTask : contains
    ScheduledTask "1" --> "1" Task : wraps
    Scheduler ..> DailyPlan : creates
    Scheduler ..> Owner : reads
    Scheduler ..> Pet : reads
    Scheduler ..> Task : reads
    Scheduler ..> expand_recurring_tasks : calls
